# bimifc

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  crates-publish.yml  python-publish.yml
crates/bimifc-bevy/: Cargo.toml
crates/bimifc-bevy/src/: camera.rs  lib.rs  loader.rs  main.rs  mesh.rs  photometric.rs  storage.rs
crates/bimifc-bevy/src/ffi/: apple.rs
crates/bimifc-bevy/src/ui/: mod.rs  toolbar.rs
crates/bimifc-geometry/: Cargo.toml
crates/bimifc-geometry/src/: extrusion.rs  lib.rs  mesh.rs  processors.rs  profile.rs  router.rs  transform.rs  triangulation.rs
crates/bimifc-geometry/src/processors/: extruded_area_solid.rs  faceted_brep.rs  mod.rs  revolved_area_solid.rs  swept_disk_solid.rs  triangulated_face_set.rs
crates/bimifc-geometry/tests/: test_ifc_file.rs
crates/bimifc-leptos/: Cargo.toml
crates/bimifc-leptos/src/: bridge.rs  lib.rs  state.rs
crates/bimifc-leptos/src/components/: hierarchy_panel.rs  mod.rs  properties_panel.rs  toolbar.rs  viewer_layout.rs  viewport.rs
crates/bimifc-model/: Cargo.toml
crates/bimifc-model/src/: geometry.rs  lib.rs  properties.rs  resolver.rs  spatial.rs  traits.rs  types.rs
crates/bimifc-parser/: Cargo.toml
crates/bimifc-parser/src/: decoder.rs  lib.rs  lighting.rs  model.rs  properties.rs  resolver.rs  scanner.rs  spatial.rs  tokenizer.rs  units.rs
crates/bimifc-parser/src/ifcx/: composition.rs  geometry.rs  mod.rs  model.rs  types.rs
crates/bimifc-parser/tests/: ifcx_test.rs
crates/bimifc-python/: Cargo.toml  pyproject.toml
crates/bimifc-python/src/: error.rs  geometry.rs  lib.rs  lighting.rs  model.rs  properties.rs  spatial.rs  types.rs
crates/bimifc-viewer/: Cargo.toml  index-split.html  index.html
crates/bimifc-viewer-tui/: Cargo.toml
crates/bimifc-viewer-tui/src/: app.rs  camera.rs  input.rs  lib.rs  main.rs  scene.rs
crates/bimifc-viewer-tui/src/renderer/: culling.rs  floorplan.rs  framebuffer.rs  mod.rs  projection.rs  rasterizer.rs  shader.rs  wireframe.rs
crates/bimifc-viewer-tui/src/ui/: hierarchy.rs  mod.rs  properties.rs  status.rs  viewport.rs
crates/bimifc-viewer/ifc/: AZB office.ifc  bayarena_lighting.ifc
crates/bimifc-viewer/src/: lib.rs
crates/bimifc-viewer/static/: styles.css
demos/: tui-demo.tape
plans/: BAYARENA_IFC_NAMING_IMPROVEMENTS.md  CLAUDE.md  stl-import.md  upstream_update.md
scripts/: bayarena_3mf_to_ifc.py  bayarena_stl_to_ifc.py  build-config.toml.example  build-unified.sh  build-wasm-split.sh  test-ci-locally.sh
tests/: models
