[workspace]
resolver = "2"
members = [
    "crates/bimifc-bevy",
    "crates/bimifc-geometry",
    "crates/bimifc-leptos",
    "crates/bimifc-model",
    "crates/bimifc-parser",
    "crates/bimifc-viewer",
    "crates/bimifc-viewer-tui",
    "crates/bimifc-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/holg/bimifc"
authors = ["holg"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Use local eulumdat checkout for development; CI/crates.io uses the published version
[patch.crates-io]
eulumdat = { path = "../eulumdat-rs/crates/eulumdat" }
eulumdat-bevy = { path = "../eulumdat-rs/crates/eulumdat-bevy" }
