[package]
name = "bimifc-bevy"
version = "0.1.0"
edition = "2021"
description = "Bevy-based 3D viewer for IFC models with WebGPU/WebGL2 rendering"
license = "MPL-2.0"
repository = "https://github.com/holg/bimifc"
keywords = ["ifc", "bim", "bevy", "3d", "webgpu"]
categories = ["rendering", "graphics", "game-development"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "bimifc_bevy"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "bimifc-viewer"
path = "src/main.rs"

[features]
default = ["bevy-ui"]
bevy-ui = []
external-ui = []
webgl2 = []
native-view = []
color-palette = []

[dependencies]
bimifc-model = { path = "../bimifc-model" }
bimifc-parser = { path = "../bimifc-parser" }
bimifc-geometry = { path = "../bimifc-geometry" }

# Math library
nalgebra = { version = "0.33", default-features = false, features = ["std"] }

# Error handling
anyhow = "1.0"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fast hashing
rustc-hash = "1.1"

# Zero-copy byte casting
bytemuck = { version = "1.14", features = ["derive"] }

# Window handles for native embedding
raw-window-handle = "0.6"

# UUID for window IDs
uuid = { version = "1.0", features = ["v4"] }

# Bevy 3D engine - common features
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_ui",
    "bevy_text",
    "default_font",
    "tonemapping_luts",
    "png",
    "zstd_rust",
] }

# Desktop (Linux/Windows) dependencies
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios"), not(target_os = "macos")))'.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_ui",
    "bevy_text",
    "default_font",
    "multi_threaded",
    "tonemapping_luts",
    "png",
    "x11",
    "webgpu",
    "zstd_rust",
] }
rfd = "0.15"

# WASM build dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.22"
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_ui",
    "bevy_text",
    "default_font",
    "webgpu",
    "tonemapping_luts",
    "png",
    "zstd_rust",
] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "HtmlElement",
    "HtmlInputElement",
    "Location",
    "Storage",
    "Window",
] }

# iOS dependencies
[target.'cfg(target_os = "ios")'.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_ui",
    "bevy_text",
    "default_font",
    "tonemapping_luts",
    "png",
    "zstd_rust",
] }
core-graphics = "0.24"
objc = "0.2"

# macOS dependencies
[target.'cfg(target_os = "macos")'.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_ui",
    "bevy_text",
    "default_font",
    "multi_threaded",
    "tonemapping_luts",
    "png",
    "zstd_rust",
] }
core-graphics = "0.24"
objc = "0.2"
