[package]
name = "bimifc-geometry"
version = "0.2.0"
edition = "2021"
description = "Geometry processing for IFC models"
license = "MPL-2.0"
repository = "https://github.com/holg/bimifc"
keywords = ["ifc", "bim", "geometry", "mesh"]
categories = ["graphics", "rendering"]

[dependencies]
bimifc-model = { version = "0.2.0", path = "../bimifc-model" }

# Math
nalgebra = "0.33"

# Triangulation
earcutr = "0.4"

# Data structures
rustc-hash = "2"

# Error handling
thiserror = "2"

[dev-dependencies]
bimifc-parser = { version = "0.2.0", path = "../bimifc-parser" }
