[package]
name = "bimifc-leptos"
version = "0.1.0"
edition = "2021"
description = "Leptos-based UI components for BIM IFC viewer"
license = "MPL-2.0"
repository = "https://github.com/holg/bimifc"
keywords = ["ifc", "bim", "leptos", "wasm"]
categories = ["wasm", "gui"]

[lib]
name = "bimifc_leptos"
path = "src/lib.rs"

[features]
default = []
# Enable unified mode - direct memory sharing with Bevy (no serialization)
unified = ["bimifc-bevy"]

[dependencies]
# Core IFC parsing (our own parser)
bimifc-model = { path = "../bimifc-model" }
bimifc-parser = { path = "../bimifc-parser" }
bimifc-geometry = { path = "../bimifc-geometry" }

# Photometric data parsing and SVG diagram generation
eulumdat = { path = "../../../eulumdat-rs/crates/eulumdat", default-features = false }

# Bevy types for unified mode (optional)
bimifc-bevy = { path = "../bimifc-bevy", optional = true, default-features = false }

# Leptos framework
leptos = { version = "0.7", features = ["csr"] }

# WASM utilities
gloo = "0.11"
gloo-file = { version = "0.3", features = ["futures"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fast hashing
rustc-hash = "1.1"

# Logging
log = "0.4"

# Base64 for binary data
base64 = "0.22"

# Zero-copy byte casting
bytemuck = { version = "1.14", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Clipboard",
    "console",
    "Document",
    "DragEvent",
    "DataTransfer",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "Headers",
    "HtmlCanvasElement",
    "HtmlDivElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "KeyboardEvent",
    "Location",
    "MouseEvent",
    "Navigator",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ScrollBehavior",
    "Storage",
    "Url",
    "UrlSearchParams",
    "WheelEvent",
    "Window",
]
