[package]
name = "bimifc-model"
version = "0.1.0"
edition = "2021"
description = "Trait definitions and shared types for BIM IFC parsing"
license = "MPL-2.0"
repository = "https://github.com/holg/bimifc"
keywords = ["ifc", "bim", "parser", "building"]
categories = ["parser-implementations", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
