[package]
name = "bimifc-parser"
version = "0.2.0"
edition = "2021"
description = "High-performance IFC parser with IFC4 (STEP) and IFC5 (IFCX) support"
license = "MPL-2.0"
repository = "https://github.com/holg/bimifc"
keywords = ["ifc", "bim", "parser", "step", "ifcx"]
categories = ["parser-implementations", "encoding"]

[dependencies]
bimifc-model = { version = "0.2.0", path = "../bimifc-model" }

# Photometry
eulumdat = { version = "0.5", default-features = false }

# Parsing
lexical-core = "1"
memchr = "2"
nom = "8"

# Data structures
rustc-hash = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"

[dev-dependencies]
criterion = "0.5"
