[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bimifc"
version = "0.1.0"
description = "Python bindings for bimifc IFC (BIM) file parser — fast, pure-pip, no C++ dependencies"
license = { text = "MPL-2.0" }
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["ifc", "bim", "parser", "building", "aec"]

[project.urls]
Homepage = "https://github.com/holg/bimifc"
Repository = "https://github.com/holg/bimifc"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bimifc"
