[package]
name = "bimifc-viewer-tui"
version = "0.2.0"
edition = "2021"
description = "Terminal-based IFC viewer with floor plan rendering"
license = "MPL-2.0"
repository = "https://github.com/holg/bimifc"
keywords = ["ifc", "bim", "tui", "terminal", "ratatui"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "bimifc-tui"
path = "src/main.rs"

[dependencies]
bimifc-geometry = { version = "0.2.0", path = "../bimifc-geometry" }
bimifc-model = { version = "0.2.0", path = "../bimifc-model" }
bimifc-parser = { version = "0.2.0", path = "../bimifc-parser" }

# TUI
crossterm = "0.28"
ratatui = "0.29"

# Math
glam = "0.29"

# CLI
clap = { version = "4", features = ["derive"] }

# Photometry
base64 = "0.22"
eulumdat = { version = "0.5", default-features = false }

# Error handling
anyhow = "1.0"
