[package]
name = "bimifc-viewer"
version = "0.1.0"
edition = "2021"
description = "BIM IFC web viewer - Leptos UI + Bevy 3D"
license = "MPL-2.0"
repository = "https://github.com/holg/bimifc"
keywords = ["ifc", "bim", "viewer", "wasm", "webgpu"]
categories = ["wasm", "rendering", "visualization"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bimifc-model = { path = "../bimifc-model" }
bimifc-parser = { path = "../bimifc-parser" }
bimifc-geometry = { path = "../bimifc-geometry" }
bimifc-leptos = { path = "../bimifc-leptos", features = ["unified"] }
bimifc-bevy = { path = "../bimifc-bevy", default-features = false }

leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
once_cell = "1.20"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
]

[features]
default = ["unified"]
unified = ["bimifc-leptos/unified"]
