[package]
name = "bimifc-viewer"
version = "0.2.0"
edition = "2021"
description = "BIM IFC web viewer - Leptos UI + Bevy 3D"
license = "MPL-2.0"
repository = "https://github.com/holg/bimifc"
keywords = ["ifc", "bim", "viewer", "wasm", "webgpu"]
categories = ["wasm", "rendering", "visualization"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["unified", "photometric", "color-palette"]
color-palette = ["bimifc-bevy/color-palette"]
unified = ["bimifc-leptos/unified"]
photometric = ["bimifc-bevy/photometric", "bimifc-leptos/photometric"]

[dependencies]
bimifc-bevy = { version = "0.2.0", path = "../bimifc-bevy", default-features = false }
bimifc-geometry = { version = "0.2.0", path = "../bimifc-geometry" }
bimifc-leptos = { version = "0.2.0", path = "../bimifc-leptos", features = ["unified"] }
bimifc-model = { version = "0.2.0", path = "../bimifc-model" }
bimifc-parser = { version = "0.2.0", path = "../bimifc-parser" }

console_error_panic_hook = "0.1"
js-sys = "0.3"
leptos = { version = "0.7", features = ["csr"] }
once_cell = "1.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
]
